--- a/components/button/button.html
+++ b/components/button/button.html
@@ -1,122 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/1a8e4103d5.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="../../css/layout.css" />
+    <link rel="stylesheet" href="./button.css" />
+    <title>Sharp UI|Button</title>
+    <link rel="icon" type="image/x-icon" href="../../assets/images/pike.png" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="https://kit.fontawesome.com/1a8e4103d5.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="../../css/layout.css" />
-  <link rel="stylesheet" href="./button.css" />
-  <title>Sharp UI|Button</title>
-</head>
-
-<body>
-  <div class="header">
-    <div class="logo">
-      <h1>Sharp UI</h1>
-      <p class="logo-caption">v1.0</p>
+  <body>
+    <div class="header">
+      <div class="logo">
+        <h1><a class="reset-link" href="../../index.html">Sharp UI</a></h1>
+        <p class="logo-caption">v1.0</p>
+      </div>
+      <a target="_blank" href="https://github.com/ajitpsakri/Sharp-UI"
+        ><i class="header-icon fab fa-github"></i
+      ></a>
     </div>
-    <a target="_blank" href="https://github.com/ajitpsakri/Sharp-UI"><i class="header-icon fab fa-github"></i></a>
-  </div>
-  <div class="main-content">
-    <aside>
-      <div class="sidebar-list-container">
-        <a href="../get-started/get-started.html">
-          <strong>Get Started</strong></a>
-        <p class="sidebar-label">Components</p>
-        <div class="component-links">
-          <a href="../avatar/avatar.html">Avatar</a>
-          <a href="../alert/alert.html">Alert</a>
-          <a href="../badge/badge.html">Badge</a>
-          <a class="current" href="../button/button.html">Button</a>
-          <a href="../card/card.html">Card</a>
-          <a href="../image/image.html">Image</a>
-          <a href="../input/input.html">Input</a>
-          <a href="../modal/modal.html">Modal</a>
-          <a href="../toast/toast.html">Toast</a>
-          <a href="../rating/rating.html">Rating</a>
-          <a href="../navigation/nav.html">Navigation</a>
-          <a href="../grid/grid.html">Grid</a>
+    <div class="main-content">
+      <aside>
+        <div class="sidebar-list-container">
+          <a href="../get-started/get-started.html">
+            <strong>Get Started</strong></a
+          >
+          <p class="sidebar-label">Components</p>
+          <div class="component-links">
+            <a href="../avatar/avatar.html">Avatar</a>
+            <a href="../alert/alert.html">Alert</a>
+            <a href="../badge/badge.html">Badge</a>
+            <a class="current" href="../button/button.html">Button</a>
+            <a href="../card/card.html">Card</a>
+            <a href="../image/image.html">Image</a>
+            <a href="../input/input.html">Input</a>
+            <a href="../modal/modal.html">Modal</a>
+            <a href="../toast/toast.html">Toast</a>
+            <a href="../rating/rating.html">Rating</a>
+            <a href="../navigation/nav.html">Navigation</a>
+            <a href="../grid/grid.html">Grid</a>
+          </div>
         </div>
-      </div>
-    </aside>
-    <main>
-      <div class="wrapper">
-        <h1>Buttons</h1>
-        <p>
-          Buttons allow users to take actions, and make choices, with a single
-          tap.
-        </p>
+      </aside>
+      <main>
+        <div class="wrapper">
+          <h1>Buttons</h1>
+          <p>
+            Buttons allow users to take actions, and make choices, with a single
+            tap.
+          </p>
 
-        <h2>Primary button styles</h2>
-        <div class="button-container">
-          <button class="btn btn-default">Default</button>
-          <button class="btn btn-primary">Primary</button>
-          <button class="btn btn-secondary">Secondary</button>
-          <button class="btn btn-disabled">Disabled</button>
+          <h2>Primary button styles</h2>
+          <div class="button-container">
+            <button class="btn btn-default">Default</button>
+            <button class="btn btn-primary">Primary</button>
+            <button class="btn btn-secondary">Secondary</button>
+            <button class="btn btn-disabled">Disabled</button>
+          </div>
+          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fbuttons%2Fprimary-button-styles.html&style=monokai-sublime&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
+
+          <h2>Outline buttons</h2>
+          <p>Usually used for seconday buttons which user may click</p>
+          <div class="button-container">
+            <button class="btn btn-outline-primary">Primary</button>
+            <button class="btn btn-outline-secondary">Secondary</button>
+          </div>
+          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fbuttons%2Foutline-buttons.html&style=monokai-sublime&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
+
+          <h2>Buttons by size</h2>
+          <div class="button-container">
+            <button class="btn btn-primary btn-lg">Large</button>
+            <button class="btn btn-secondary btn-md">Medium</button>
+            <button class="btn btn-default btn-sm">Small</button>
+          </div>
+          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fbuttons%2Fbutton-with-size.html&style=monokai-sublime&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
+
+          <h2>Buttons with icons</h2>
+          <div class="button-container">
+            <button class="btn btn-icon btn-primary">
+              <i class="fas fa-shopping-cart"></i>
+              Add to cart
+            </button>
+            <button class="btn btn-icon btn-secondary">
+              <i class="fas fa-trash-alt"></i>
+              Delete
+            </button>
+            <button class="btn btn-icon btn-default">
+              <i class="fas fa-cloud-upload-alt"></i>
+              Upload
+            </button>
+            <button class="btn btn-primary">
+              <i class="fab fa-github"></i>
+              Sign in/up
+            </button>
+          </div>
+          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fbuttons%2Fbuttons-icons.html&style=monokai-sublime&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
+
+          <h2>Floating action buttons</h2>
+          <p>These acts as toggle buttons</p>
+          <div class="button-container">
+            <button class="btn btn-float btn-primary">
+              <i class="fas fa-plus"></i>
+            </button>
+            <button class="btn btn-float btn-secondary">
+              <i class="fas fa-trash-alt"></i>
+            </button>
+            <button class="btn btn-float btn-primary">
+              <i class="fas fa-pencil-alt"></i>
+            </button>
+          </div>
+          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fbuttons%2Ffloat.html&style=monokai-sublime&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
         </div>
-        <script
-          src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fbuttons%2Fprimary-button-styles.html&style=monokai-sublime&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
-
-        <h2>Outline buttons</h2>
-        <p>Usually used for seconday buttons which user may click</p>
-        <div class="button-container">
-          <button class="btn btn-outline-primary">Primary</button>
-          <button class="btn btn-outline-secondary">Secondary</button>
-        </div>
-        <script
-          src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fbuttons%2Foutline-buttons.html&style=monokai-sublime&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
-
-        <h2>Buttons by size</h2>
-        <div class="button-container">
-          <button class="btn btn-primary btn-lg">Large</button>
-          <button class="btn btn-secondary btn-md">Medium</button>
-          <button class="btn btn-default btn-sm">Small</button>
-        </div>
-        <script
-          src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fbuttons%2Fbutton-with-size.html&style=monokai-sublime&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
-
-        <h2>Buttons with icons</h2>
-        <div class="button-container">
-          <button class="btn btn-icon btn-primary">
-            <i class="fas fa-shopping-cart"></i>
-            Add to cart
-          </button>
-          <button class="btn btn-icon btn-secondary">
-            <i class="fas fa-trash-alt"></i>
-            Delete
-          </button>
-          <button class="btn btn-icon btn-default">
-            <i class="fas fa-cloud-upload-alt"></i>
-            Upload
-          </button>
-          <button class="btn btn-primary">
-            <i class="fab fa-github"></i>
-            Sign in/up
-          </button>
-        </div>
-        <script
-          src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fbuttons%2Fbuttons-icons.html&style=monokai-sublime&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
-
-        <h2>Floating action buttons</h2>
-        <p>These acts as toggle buttons</p>
-        <div class="button-container">
-          <button class="btn btn-float btn-primary">
-            <i class="fas fa-plus"></i>
-          </button>
-          <button class="btn btn-float btn-secondary">
-            <i class="fas fa-trash-alt"></i>
-          </button>
-          <button class="btn btn-float btn-primary">
-            <i class="fas fa-pencil-alt"></i>
-          </button>
-        </div>
-        <script
-          src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fbuttons%2Ffloat.html&style=monokai-sublime&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
-      </div>
-    </main>
-  </div>
-</body>
-
+      </main>
+    </div>
+  </body>
 </html>
