--- a/components/navigation/wholeNav.html
+++ b/components/navigation/wholeNav.html
@@ -10,6 +10,7 @@
       crossorigin="anonymous"
     ></script>
     <title>Sharp UI | Navigation</title>
+    <link rel="icon" type="image/x-icon" href="../../assets/images/pike.png" />
   </head>
   <style>
     body {
