--- a/components/avatar/avatar.html
+++ b/components/avatar/avatar.html
@@ -8,12 +8,13 @@
   <link rel="stylesheet" href="../../css/layout.css" />
   <link rel="stylesheet" href="./avatar.css" />
   <title>Avatar | Sharp UI</title>
+  <link rel="icon" type="image/x-icon" href="../../assets/images/pike.png" />
 </head>
 
 <body>
   <div class="header">
     <div class="logo">
-      <h1>Sharp UI</h1>
+      <h1><a class="reset-link" href="../../index.html">Sharp UI</a></h1>
       <p class="logo-caption">v1.0</p>
     </div>
     <a target="_blank" href="https://github.com/ajitpsakri/Sharp-UI"><i class="header-icon fab fa-github"></i></a>
