--- a/components/grid/grid.html
+++ b/components/grid/grid.html
@@ -1,82 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./grid.css" />
+    <link rel="stylesheet" href="../../css/layout.css" />
+    <script
+      src="https://kit.fontawesome.com/1a8e4103d5.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Sharp UI | Grid</title>
+    <link rel="icon" type="image/x-icon" href="../../assets/images/pike.png" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./grid.css" />
-  <link rel="stylesheet" href="../../css/layout.css" />
-  <script src="https://kit.fontawesome.com/1a8e4103d5.js" crossorigin="anonymous"></script>
-  <title>Sharp UI | Grid</title>
-</head>
-
-<body>
-  <div class="header">
-    <div class="logo">
-      <h1>Sharp UI</h1>
-      <p class="logo-caption">v1.0</p>
+  <body>
+    <div class="header">
+      <div class="logo">
+        <h1><a class="reset-link" href="../../index.html">Sharp UI</a></h1>
+        <p class="logo-caption">v1.0</p>
+      </div>
+      <a target="_blank" href="https://github.com/ajitpsakri/Sharp-UI"
+        ><i class="header-icon fab fa-github"></i
+      ></a>
     </div>
-    <a target="_blank" href="https://github.com/ajitpsakri/Sharp-UI"><i class="header-icon fab fa-github"></i></a>
-  </div>
-  <div class="main-content">
-    <aside>
-      <div class="sidebar-list-container">
-        <a href="../get-started/get-started.html">
-          <strong>Get Started</strong></a>
-        <p class="sidebar-label">Components</p>
-        <div class="component-links">
-          <a href="../avatar/avatar.html">Avatar</a>
-          <a href="../alert/alert.html">Alert</a>
-          <a href="../badge/badge.html">Badge</a>
-          <a href="../button/button.html">Button</a>
-          <a href="../card/card.html">Card</a>
-          <a href="../image/image.html">Image</a>
-          <a href="../input/input.html">Input</a>
-          <a href="../modal/modal.html">Modal</a>
-          <a href="../toast/toast.html">Toast</a>
-          <a href="../rating/rating.html">Rating</a>
-          <a href="../navigation/nav.html">Navigation</a>
-          <a class="current" href="../grid/grid.html">Grid</a>
+    <div class="main-content">
+      <aside>
+        <div class="sidebar-list-container">
+          <a href="../get-started/get-started.html">
+            <strong>Get Started</strong></a
+          >
+          <p class="sidebar-label">Components</p>
+          <div class="component-links">
+            <a href="../avatar/avatar.html">Avatar</a>
+            <a href="../alert/alert.html">Alert</a>
+            <a href="../badge/badge.html">Badge</a>
+            <a href="../button/button.html">Button</a>
+            <a href="../card/card.html">Card</a>
+            <a href="../image/image.html">Image</a>
+            <a href="../input/input.html">Input</a>
+            <a href="../modal/modal.html">Modal</a>
+            <a href="../toast/toast.html">Toast</a>
+            <a href="../rating/rating.html">Rating</a>
+            <a href="../navigation/nav.html">Navigation</a>
+            <a class="current" href="../grid/grid.html">Grid</a>
+          </div>
         </div>
-      </div>
-    </aside>
-    <main>
-      <div class="wrapper">
-        <h1>Grid</h1>
-        <p>
-          CSS Grid is a two-dimensional grid system used to work on the layout
-          of UI elements and segments of a webpage. <code>gap-15</code> refers
-          to <code>gap:15px</code>,this applies to <code>gap-10</code>
-        </p>
-        <h2>Grid 2 Rows and 2 colums</h2>
+      </aside>
+      <main>
+        <div class="wrapper">
+          <h1>Grid</h1>
+          <p>
+            CSS Grid is a two-dimensional grid system used to work on the layout
+            of UI elements and segments of a webpage. <code>gap-15</code> refers
+            to <code>gap:15px</code>,this applies to <code>gap-10</code>
+          </p>
+          <h2>Grid 2 Rows and 2 colums</h2>
 
-        <div class="grid grid-row-2 gap-10">
-          <div class="yellow"></div>
-          <div class="red"></div>
+          <div class="grid grid-row-2 gap-10">
+            <div class="yellow"></div>
+            <div class="red"></div>
+          </div>
+          <div class="grid grid-colm-2 gap-15">
+            <div class="yellow"></div>
+            <div class="red"></div>
+          </div>
+          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fgrid%2Fgrid-2.html&style=a11y-dark&showCopy=on&fetchFromJsDelivr=on"></script>
+          <h2>Grid 3 Rows and 3 Columns</h2>
+          <div class="grid grid-row-3 gap-10">
+            <div class="yellow"></div>
+            <div class="red"></div>
+            <div class="blue"></div>
+          </div>
+          <div class="grid grid-column-3 gap-10">
+            <div class="yellow"></div>
+            <div class="red"></div>
+            <div class="blue"></div>
+          </div>
+          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fgrid%2Fgrid-3.html&style=a11y-dark&showCopy=on&fetchFromJsDelivr=on"></script>
         </div>
-        <div class="grid grid-colm-2 gap-15">
-          <div class="yellow"></div>
-          <div class="red"></div>
-        </div>
-        <script
-          src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fgrid%2Fgrid-2.html&style=a11y-dark&showCopy=on&fetchFromJsDelivr=on"></script>
-        <h2>Grid 3 Rows and 3 Columns</h2>
-        <div class="grid grid-row-3 gap-10">
-          <div class="yellow"></div>
-          <div class="red"></div>
-          <div class="blue"></div>
-        </div>
-        <div class="grid grid-column-3 gap-10">
-          <div class="yellow"></div>
-          <div class="red"></div>
-          <div class="blue"></div>
-        </div>
-        <script
-          src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fgrid%2Fgrid-3.html&style=a11y-dark&showCopy=on&fetchFromJsDelivr=on"></script>
-      </div>
-    </main>
-  </div>
-</body>
-
+      </main>
+    </div>
+  </body>
 </html>
