--- a/components/image/image.html
+++ b/components/image/image.html
@@ -1,74 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./image.css" />
+    <link rel="stylesheet" href="../../css/layout.css" />
+    <title>Sharp UI | Image</title>
+    <link rel="icon" type="image/x-icon" href="../../assets/images/pike.png" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./image.css" />
-  <link rel="stylesheet" href="../../css/layout.css" />
-  <title>Sharp UI | Image</title>
-</head>
-
-<body>
-  <div class="header">
-    <div class="logo">
-      <h1>Sharp UI</h1>
-      <p class="logo-caption">v1.0</p>
+  <body>
+    <div class="header">
+      <div class="logo">
+        <h1><a class="reset-link" href="../../index.html">Sharp UI</a></h1>
+        <p class="logo-caption">v1.0</p>
+      </div>
+      <a target="_blank" href="https://github.com/ajitpsakri/Sharp-UI"
+        ><i class="header-icon fab fa-github"></i
+      ></a>
     </div>
-    <a target="_blank" href="https://github.com/ajitpsakri/Sharp-UI"><i class="header-icon fab fa-github"></i></a>
-  </div>
-  <div class="main-content">
-    <aside>
-      <div class="sidebar-list-container">
-        <a href="../get-started/get-started.html">
-          <strong>Get Started</strong></a>
-        <p class="sidebar-label">Components</p>
-        <div class="component-links">
-          <a href="../avatar/avatar.html">Avatar</a>
-          <a href="../alert/alert.html">Alert</a>
-          <a href="../badge/badge.html">Badge</a>
-          <a href="../button/button.html">Button</a>
-          <a href="../card/card.html">Card</a>
-          <a class="current" href="../image/image.html">Image</a>
-          <a href="../input/input.html">Input</a>
-          <a href="../modal/modal.html">Modal</a>
-          <a href="../toast/toast.html">Toast</a>
-          <a href="../rating/rating.html">Rating</a>
-          <a href="../navigation/nav.html">Navigation</a>
-          <a href="../grid/grid.html">Grid</a>
-        </div>
-      </div>
-    </aside>
-    <main>
-      <div class="wrapper">
-        <h1>Images</h1>
-        <div class="image-container">
-          <h2>Responsive Image</h2>
-          <p>
-            When you increase/decrease the size of the screen the image size
-            also get's decreased using responsive image class
-            <code>image-responsive</code>.
-          </p>
-          <div class="image-responsive-container">
-            <img class="image image-responsive" src="../../assets/images/simon-lee.jpg" alt="flower" />
+    <div class="main-content">
+      <aside>
+        <div class="sidebar-list-container">
+          <a href="../get-started/get-started.html">
+            <strong>Get Started</strong></a
+          >
+          <p class="sidebar-label">Components</p>
+          <div class="component-links">
+            <a href="../avatar/avatar.html">Avatar</a>
+            <a href="../alert/alert.html">Alert</a>
+            <a href="../badge/badge.html">Badge</a>
+            <a href="../button/button.html">Button</a>
+            <a href="../card/card.html">Card</a>
+            <a class="current" href="../image/image.html">Image</a>
+            <a href="../input/input.html">Input</a>
+            <a href="../modal/modal.html">Modal</a>
+            <a href="../toast/toast.html">Toast</a>
+            <a href="../rating/rating.html">Rating</a>
+            <a href="../navigation/nav.html">Navigation</a>
+            <a href="../grid/grid.html">Grid</a>
           </div>
-          <script
-            src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fimg%2Fimg-res.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
-          <div class="image-round-container">
-            <h2>Image Round</h2>
+        </div>
+      </aside>
+      <main>
+        <div class="wrapper">
+          <h1>Images</h1>
+          <div class="image-container">
+            <h2>Responsive Image</h2>
             <p>
-              You can achieve circular image using the class
-              <code>image-round</code>
+              When you increase/decrease the size of the screen the image size
+              also get's decreased using responsive image class
+              <code>image-responsive</code>.
             </p>
-            <img class="image image-round" src="../../assets/images/simon-lee.jpg" alt="flower" />
+            <div class="image-responsive-container">
+              <img
+                class="image image-responsive"
+                src="../../assets/images/simon-lee.jpg"
+                alt="flower"
+              />
+            </div>
+            <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fimg%2Fimg-res.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
+            <div class="image-round-container">
+              <h2>Image Round</h2>
+              <p>
+                You can achieve circular image using the class
+                <code>image-round</code>
+              </p>
+              <img
+                class="image image-round"
+                src="../../assets/images/simon-lee.jpg"
+                alt="flower"
+              />
+            </div>
+            <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fimg%2Fimg-round.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
           </div>
-          <script
-            src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fimg%2Fimg-round.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
         </div>
-      </div>
-    </main>
-  </div>
-</body>
-
+      </main>
+    </div>
+  </body>
 </html>
