--- a/components/rating/rating.html
+++ b/components/rating/rating.html
@@ -1,72 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./rating.css" />
+    <link rel="stylesheet" href="../../css/layout.css" />
+    <script
+      src="https://kit.fontawesome.com/1a8e4103d5.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Sharp UI | Rating</title>
+    <link rel="icon" type="image/x-icon" href="../../assets/images/pike.png" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./rating.css" />
-  <link rel="stylesheet" href="../../css/layout.css" />
-  <script src="https://kit.fontawesome.com/1a8e4103d5.js" crossorigin="anonymous"></script>
-  <title>Sharp UI | Rating</title>
-</head>
-
-<body>
-  <div class="header">
-    <div class="logo">
-      <h1>Sharp UI</h1>
-      <p class="logo-caption">v1.0</p>
+  <body>
+    <div class="header">
+      <div class="logo">
+        <h1><a class="reset-link" href="../../index.html">Sharp UI</a></h1>
+        <p class="logo-caption">v1.0</p>
+      </div>
+      <a target="_blank" href="https://github.com/ajitpsakri/Sharp-UI"
+        ><i class="header-icon fab fa-github"></i
+      ></a>
     </div>
-    <a target="_blank" href="https://github.com/ajitpsakri/Sharp-UI"><i class="header-icon fab fa-github"></i></a>
-  </div>
-  <div class="main-content">
-    <aside>
-      <div class="sidebar-list-container">
-        <a href="../get-started/get-started.html">
-          <strong>Get Started</strong></a>
-        <p class="sidebar-label">Components</p>
-        <div class="component-links">
-          <a href="../avatar/avatar.html">Avatar</a>
-          <a href="../alert/alert.html">Alert</a>
-          <a href="../badge/badge.html">Badge</a>
-          <a href="../button/button.html">Button</a>
-          <a href="../card/card.html">Card</a>
-          <a href="../image/image.html">Image</a>
-          <a href="../input/input.html">Input</a>
-          <a href="../modal/modal.html">Modal</a>
-          <a href="../toast/toast.html">Toast</a>
-          <a class="current" href="../rating/rating.html">Rating</a>
-          <a href="../navigation/nav.html">Navigation</a>
-          <a href="../grid/grid.html">Grid</a>
+    <div class="main-content">
+      <aside>
+        <div class="sidebar-list-container">
+          <a href="../get-started/get-started.html">
+            <strong>Get Started</strong></a
+          >
+          <p class="sidebar-label">Components</p>
+          <div class="component-links">
+            <a href="../avatar/avatar.html">Avatar</a>
+            <a href="../alert/alert.html">Alert</a>
+            <a href="../badge/badge.html">Badge</a>
+            <a href="../button/button.html">Button</a>
+            <a href="../card/card.html">Card</a>
+            <a href="../image/image.html">Image</a>
+            <a href="../input/input.html">Input</a>
+            <a href="../modal/modal.html">Modal</a>
+            <a href="../toast/toast.html">Toast</a>
+            <a class="current" href="../rating/rating.html">Rating</a>
+            <a href="../navigation/nav.html">Navigation</a>
+            <a href="../grid/grid.html">Grid</a>
+          </div>
         </div>
-      </div>
-    </aside>
-    <main>
-      <div class="wrapper">
-        <h1>Rating</h1>
-        <p>
-          When clicked on a star all the preseding star will turn gold. On
-          double click rating will get reset. <code>rating-star</code> class
-          should be added to enable this feature. <code>rating</code> variable
-          is provided so that you can show what is the rating
-        </p>
-        <div class="rating-container">
-          <i class="rating-star far fa-star"></i>
-          <i class="rating-star far fa-star"></i>
-          <i class="rating-star far fa-star"></i>
-          <i class="rating-star far fa-star"></i>
-          <i class="rating-star far fa-star"></i>
+      </aside>
+      <main>
+        <div class="wrapper">
+          <h1>Rating</h1>
+          <p>
+            When clicked on a star all the preseding star will turn gold. On
+            double click rating will get reset. <code>rating-star</code> class
+            should be added to enable this feature. <code>rating</code> variable
+            is provided so that you can show what is the rating
+          </p>
+          <div class="rating-container">
+            <i class="rating-star far fa-star"></i>
+            <i class="rating-star far fa-star"></i>
+            <i class="rating-star far fa-star"></i>
+            <i class="rating-star far fa-star"></i>
+            <i class="rating-star far fa-star"></i>
+          </div>
+          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Frating%2Frating.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
+          <h2>JavaScript Code</h2>
+          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Frating%2Frating.js&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
         </div>
-        <script
-          src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Frating%2Frating.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
-        <h2>JavaScript Code</h2>
-        <script
-          src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Frating%2Frating.js&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
-      </div>
-    </main>
-  </div>
+      </main>
+    </div>
 
-  <script src="./rating.js"></script>
-</body>
-
+    <script src="./rating.js"></script>
+  </body>
 </html>
