--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,9 @@ main {
     justify-content: flex-start;
     top:5rem;
 }
-
+.reset-link{
+    text-decoration: none;
+}
 .wrapper {
     width: 100%;
     height: 100%;
