feat: code snippet add

--- a/components/utilities/utilities.html
+++ b/components/utilities/utilities.html
@@ -58,12 +58,14 @@
             <h5>H5 - Heading 5</h5>
             <h6>H6 - Heading 6</h6>
           </div>
+          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Futilities%2Fheading.html&style=a11y-dark&showCopy=on&fetchFromJsDelivr=on"></script>
           <h2>Alignment</h2>
           <div class="alignment">
             <p class="text-left">Left</p>
             <p class="text-center">Center</p>
             <p class="text-right">Right</p>
           </div>
+          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Futilities%2Falignment.html&style=a11y-dark&showCopy=on&fetchFromJsDelivr=on"></script>
           <h2>Font Sizes</h2>
           <p>8 types of font sizes</p>
           <div class="font-sizes">
@@ -76,6 +78,7 @@
             <p class="fs-2">Font Size 2</p>
             <p class="fs-1">Font Size 1</p>
           </div>
+          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Futilities%2Ffont-sizes.html&style=a11y-dark&showCopy=on&fetchFromJsDelivr=on"></script>
           <h2>Styles</h2>
           <div class="styles">
             <p>This text is of Standard text</p>
@@ -85,6 +88,7 @@
             <p class="text-strike">This text has a line going through it.</p>
             <p class="text-underline">This text has a line underneath it.</p>
           </div>
+          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Futilities%2Fstyle.html&style=a11y-dark&showCopy=on&fetchFromJsDelivr=on"></script>
         </div>
       </main>
     </div>
