chore: added links to sidebar

--- a/components/alert/alert.html
+++ b/components/alert/alert.html
@@ -41,6 +41,8 @@
             <a href="../rating/rating.html">Rating</a>
             <a href="../navigation/nav.html">Navigation</a>
             <a href="../grid/grid.html">Grid</a>
+            <a href="../utilities/utilities.html">Utilities</a>
+            <a href="../list/list.html">List</a>
           </div>
         </div>
       </aside>
