--- a/components/grid/grid.html
+++ b/components/grid/grid.html
@@ -44,6 +44,8 @@
             <a href="../rating/rating.html">Rating</a>
             <a href="../navigation/nav.html">Navigation</a>
             <a class="current" href="../grid/grid.html">Grid</a>
+            <a href="../utilities/utilities.html">Utilities</a>
+            <a href="../list/list.html">List</a>
           </div>
         </div>
       </aside>
