feat : code snippet add

--- a/components/list/list.html
+++ b/components/list/list.html
@@ -54,7 +54,7 @@
             <li>Yellow</li>
             <li>Green</li>
           </ul>
-
+          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Flist%2Fbasic.html&style=a11y-dark&showCopy=on&fetchFromJsDelivr=on"></script>
           <h2>Nested List</h2>
           <ul class="list nested-list">
             <li>
@@ -75,6 +75,7 @@
               </ul>
             </li>
           </ul>
+          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Flist%2Fnested.html&style=a11y-dark&showCopy=on&fetchFromJsDelivr=on"></script>
           <h2>Stacked List</h2>
           <ul class="list stacked-list">
             <li>List Number One</li>
@@ -82,6 +83,7 @@
             <li>List Number Three</li>
             <li>List Number Four</li>
           </ul>
+          <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Flist%2Fstacked-list.html&style=a11y-dark&showCopy=on&fetchFromJsDelivr=on"></script>
         </div>
       </main>
     </div>
