update lins in CDN link

--- a/css/all-css-file.css
+++ b/css/all-css-file.css
@@ -9,3 +9,6 @@
 @import url(../components/modal/modal.css);
 @import url(../components/navigation/nav.css);
 @import url(../components/rating/rating.css);
+@import url(../components/toast/toast.css);
+@import url(../components/list/list.css);
+@import url(../components/utilities/utilities.css);
