--- a/components/card/card.css
+++ b/components/card/card.css
@@ -7,6 +7,7 @@
 }
 /* || Basic card component  */
 .card {
+    background-color: var(--white);
     border-radius: 0.5rem;
     box-shadow: 0.01rem 0.01rem 0.4rem;
 }
