--- a/components/navigation/nav.css
+++ b/components/navigation/nav.css
@@ -6,7 +6,8 @@
 }
 .nav-container{
     padding:0rem 2rem ;
-    border-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
     background-color: white;
     display: flex;
     justify-content: space-between;
