--- a/components/navigation/nav.css
+++ b/components/navigation/nav.css
@@ -5,6 +5,10 @@
     --h3-color:grey;
 }
 .nav-container{
+    position: fixed;
+    width: 100%;
+    top:0;
+    left:0;
     padding:0rem 2rem ;
     border-bottom-left-radius: 1rem;
     border-bottom-right-radius: 1rem;
@@ -39,4 +43,7 @@
 }
 .footer-nav a{
     text-decoration: none;
+}
+.container__main-content{
+    margin-top: 9rem;
 }
