--- a/components/navigation/wholeNav.html
+++ b/components/navigation/wholeNav.html
@@ -44,6 +44,7 @@
         </div>
       </div>
     </div>
+    <div class="container__main-content"></div>
     <div class="footer-nav">
       <a href="./nav.html"><h3>< Back</h3></a>
     </div>
