--- a/components/card/card.html
+++ b/components/card/card.html
@@ -214,6 +214,48 @@
               </div>
             </div>
             <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fcard%2Fecom-card.html&style=a11y-dark&showBorder=on&showCopy=on&fetchFromJsDelivr=on"></script>
+            <div class="card card-ecommerce card-horizontal">
+              <div class="card-ecom-header">
+                <img
+                  src="https://live.staticflickr.com/7105/7139684419_4c993fb528_b.jpg"
+                  alt="random image"
+                />
+                <span class="card-ecom-header-offer-icon">
+                  <i class="fas fa-bookmark"></i>
+                  <p>25% off</p>
+                </span>
+              </div>
+              <div class="card-content">
+                <div class="card-ecom-title">
+                  <h3>Compound bow</h3>
+                  <p>author name</p>
+                </div>
+                <div class="card-ecom-price">
+                  <span class="price-show">
+                    <strike>3499₹</strike>
+                    <p>150₹</p>
+                  </span>
+                  <span class="price-change">
+                    <button class="btn btn-float btn-primary">
+                      <i class="fas fa-minus"></i>
+                    </button>
+                    <p>3</p>
+                    <button class="btn btn-float btn-primary">
+                      <i class="fas fa-plus"></i>
+                    </button>
+                  </span>
+                </div>
+                <div class="card-ecom-footer">
+                  <button class="btn btn-primary">
+                    <i class="fas fa-shopping-cart"></i> Add to cart
+                  </button>
+                  <button class="btn btn-primary">
+                    <i class="fas fa-list-ul"></i> Add to Wishlist
+                  </button>
+                </div>
+              </div>
+            </div>
+            <script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2Fajitpsakri%2FComponent-Lib-Code-Snippers%2Fblob%2Fmain%2Fcard%2Fhorizontal.html&style=a11y-dark&showCopy=on&fetchFromJsDelivr=on"></script>
           </div>
         </div>
       </main>
