fix: input placeholder

--- a/components/input/input.html
+++ b/components/input/input.html
@@ -58,7 +58,7 @@
             <div class="input-cont input-basic-container">
               <label class="input-label" for="input">Username</label>
               <input
-                placeholder="Enter username"
+                placeholder="Username"
                 class="input input-basic"
                 id="input"
                 type="text"
@@ -69,7 +69,7 @@
                 >Password</label
               >
               <input
-                placeholder="Enter password"
+                placeholder="Password"
                 class="input input-error"
                 id="input"
                 type="text"
@@ -84,7 +84,7 @@
                 >Password</label
               >
               <input
-                placeholder="Enter password"
+                placeholder="Password"
                 class="input input-success"
                 id="input"
                 type="text"
